<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/marketdark"
        android:title="@string/Market" />
    <item
        android:id="@+id/navigation_offers"
        android:icon="@drawable/category"
        android:title="@string/categories" />
    <item
        android:id="@+id/navigation_my_cart"
        android:icon="@drawable/cart2"
        android:title="@string/Cart" />

    <item
        android:id="@+id/navigation_wishlist"
        android:icon="@drawable/heart"
        android:title="@string/wishlist" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />

</menu>