<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/forget_background"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@drawable/forget_background"
        android:scaleType="fitXY">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_forget_password" />
    </RelativeLayout>

    <EditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center|start"
        android:inputType="textPassword"
        android:hint="@string/old_password"
        android:paddingEnd="8dp"
        android:textColorHint="#BEACABAB"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center|start"
        android:inputType="textPassword"
        android:hint="@string/new_password"
        android:paddingEnd="8dp"
        android:textColorHint="#BEACABAB"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center|start"
        android:inputType="textPassword"
        android:hint="@string/Confirm_password"
        android:paddingEnd="8dp"
        android:textColorHint="#BEACABAB"
        android:textSize="16sp" />

    <Button
        android:id="@+id/change_password_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/green_rounded_btn_bg"
        android:text="@string/Change_password"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />
</LinearLayout>