<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/no_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <ImageView
            android:layout_marginStart="16dp"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/sad" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/Woops"
            android:textColor="#333333"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/your_order_history"
            android:textColor="#333333"
            android:textSize="19sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="16dp"
            android:id="@+id/go_home"
            android:background="@drawable/btn_rounded_grey_outline"
            android:text="@string/SEE_OUR_CATEGORIES"
            android:textColor="#333333"
            android:textSize="19sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_orders_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp" />

</RelativeLayout>