<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activities.MyInfoActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="@android:color/white">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="@dimen/_10sdp"
                app:srcCompat="@drawable/head"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="10dp"
                android:textAllCaps="true"
                android:text="@string/MY_INFO" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/T_in_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_9sdp"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:hint="@string/First_name"
            android:inputType="text"
            android:padding="@dimen/_2sdp"
            android:textColorHint="@color/colorRamadi"
            android:textSize="@dimen/_11sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/T_in_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/T_in_first_name">

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:hint="@string/Last_name"
            android:inputType="text"
            android:padding="@dimen/_2sdp"
            android:textColorHint="@color/colorRamadi"
            android:textSize="@dimen/_11sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/T_in_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/T_in_last_name">

        <EditText
            android:id="@+id/mobileNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:hint="@string/Mobile_number"
            android:inputType="number"
            android:padding="@dimen/_2sdp"
            android:textColorHint="@color/colorRamadi"
            android:textSize="@dimen/_11sdp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/T_in_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/T_in_mobile_number">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_2sdp"
            android:textColorHint="@color/colorRamadi"
            android:textSize="@dimen/_11sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/relative_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/T_in_email"
        >

        <Spinner
            android:id="@+id/spinner_gender"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            app:backgroundTint="@color/colorRamadi"
            android:prompt="@string/Gender"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relative_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative_gender"
        >

        <Spinner
            android:id="@+id/spinner_country"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            app:backgroundTint="@color/colorRamadi"
            android:prompt="@string/Country"
            ></Spinner>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relative_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative_country"
        >

        <Spinner
            android:id="@+id/spinner_city"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            app:backgroundTint="@color/colorRamadi"
            android:prompt="@string/City"
            ></Spinner>
    </RelativeLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/T_in_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorRamadi"
        app:layout_constraintTop_toBottomOf="@id/relative_city">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/_2sdp"
            android:textSize="@dimen/_11sdp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/T_in_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorRamadi"
        app:layout_constraintTop_toBottomOf="@id/T_in_password">

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:hint="@string/Confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/_2sdp"
            android:textSize="@dimen/_11sdp" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_43sdp"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:background="@android:color/black"
        android:text="@string/Save"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/T_in_confirmPassword" />


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSave"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>