<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@android:color/white"
    android:elevation="16dp"
    app:cardCornerRadius="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TextView
            android:id="@+id/update_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_26sdp"
            android:gravity="center"
            android:padding="@dimen/_4sdp"
            android:text="@string/update_your_cart_to_place_order"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="19sp" />

        <RelativeLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/green_rounded_btn_bg"
                android:text="@string/update"
                android:textColor="#fff"
                android:textSize="14sp" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_40sdp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/red_shap"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>