<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="110dp"
        android:id="@+id/forget_background"
        android:scaleType="fitXY"
        android:background="@drawable/forget_background">

        <ImageView android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_forget_password"/>
    </RelativeLayout>

    <TextView android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:textSize="14dp"
        android:id="@+id/forget_text"
        android:textColor="@color/colorAccent"
        android:padding="2dp"
        android:gravity="center"
        android:text="@string/you_will_receive"
        android:layout_below="@+id/forget_background"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/forget_text"
        android:id="@+id/email_input"
        android:layout_marginTop="3dp"
        android:layout_height="wrap_content">

        <EditText android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="6dp"
            android:background="@null"
            android:drawableStart="@drawable/selector_email"
            android:drawablePadding="8dp"
            android:gravity="center|start"
            android:hint="@string/email"
            android:paddingEnd="8dp"
            android:textColorHint="#BEC0BEBE"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="6dp"
            android:background="#BEC0BEBE"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:background="@drawable/green_rounded_btn_bg"
        android:id="@+id/recover"
        android:layout_width="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/Recover"
        android:layout_below="@+id/email_input"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        />
</RelativeLayout>